--- a/mysite/blog/templates/blog/post_confirm_delete.html
+++ b/mysite/blog/templates/blog/post_confirm_delete.html
@@ -1,3 +1,8 @@
 {% extends "blog/base.html" %}
 {% block content %}
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure you want to delete {{}object}?</p>
+        <button type="submit" class="btn btn-danger">Delete</button>
+    </form>
 {% endblock %}
