--- a/mysite/blog/templates/blog/post_confirm_delete.html
+++ b/mysite/blog/templates/blog/post_confirm_delete.html
@@ -2,7 +2,7 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        <p>Are you sure you want to delete {{}object}?</p>
+        <p>Are you sure you want to delete {{object}}?</p>
         <button type="submit" class="btn btn-danger">Delete</button>
     </form>
 {% endblock %}
