--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
     <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
 {% endif %}
 
-<p class="postcontent">{{post.title|safe|linebreaksbr}}</p>
+<p class="postcontent">{{post.text|safe|linebreaksbr}}</p>
 
 {% if user.is_authenticated %}
     <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
