--- a/mysite/blog/templates/registration/login.html
+++ b/mysite/blog/templates/registration/login.html
@@ -11,7 +11,7 @@
 
     <form action="{% url 'login' %}" method="POST">
         {% csrf_token %}
-        {% form.as_p %}
+        {{form.as_p }}
         <button type="submit" class="btn btn-primary">Login</button>
         <input type="hidden" name="next" value="{{next}}">
     </form>
